@@ -83,7 +83,7 @@ proc test_direct_link_dll {} {
 	} else {
 	    # Check linking directly to direct_dll.dll.
 	    set msg "linking client (.dll)"
-	    if [ld_simple_link "$CC -Wl,--enable-auto-import" $tmpdir/direct_client_dll.exe
+	    if [ld_simple_link "$CC -Wl,--enable-auto-import" $tmpdir/direct_client_dll.exe \
 	      "$tmpdir/direct_client.o $tmpdir/direct_dll.dll" ] {
 		pass $msg
 	    } else {
@@ -92,7 +92,7 @@ proc test_direct_link_dll {} {
 
 	    # Check linking directly to direct_dll.sl.
 	    set msg "linking client (.sl)"
-	    if [ld_simple_link "$CC -Wl,--enable-auto-import" $tmpdir/direct_client_sl.exe
+	    if [ld_simple_link "$CC -Wl,--enable-auto-import" $tmpdir/direct_client_sl.exe \
 	      "$tmpdir/direct_client.o $tmpdir/direct_dll.sl" ] {
 		pass $msg
 	    } else {
@@ -103,7 +103,7 @@ proc test_direct_link_dll {} {
 	    # Create symbolic link.
 	    catch "exec ln -fs direct_dll.dll $tmpdir/libdirect_dll.dll.a" ln_catch
 	    set msg "linking client (symlink -> .dll)"
-	    if [ld_simple_link "$CC -Wl,--enable-auto-import" $tmpdir/direct_client_symlink_dll.exe
+	    if [ld_simple_link "$CC -Wl,--enable-auto-import" $tmpdir/direct_client_symlink_dll.exe \
 	      "$tmpdir/direct_client.o $tmpdir/libdirect_dll.dll.a" ] {
 	        pass $msg
 	    } else {
@@ -114,7 +114,7 @@ proc test_direct_link_dll {} {
 	    # Create symbolic link.
 	    catch "exec ln -fs direct_dll.sl $tmpdir/libdirect_sl.dll.a" ln_catch
 	    set msg "linking client (symlink -> .sl)"
-	    if [ld_simple_link "$CC -Wl,--enable-auto-import" $tmpdir/direct_client_symlink_sl.exe
+	    if [ld_simple_link "$CC -Wl,--enable-auto-import" $tmpdir/direct_client_symlink_sl.exe \
 	      "$tmpdir/direct_client.o $tmpdir/libdirect_sl.dll.a" ] {
 		pass $msg
 	    } else {
